--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>GPT Text Generation</title>
+    <title>Haikus Text Generation</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/onnxjs/dist/onnx.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
@@ -9,8 +9,8 @@
     
 </head>
 <body>
-    <h1>GPT Text Generation</h1>
-    <p>This application is an AI-powered text generator that crafts Shakespearean-style prose.</p>
+    <h1>Haikus Text Generation</h1>
+    <p>This application is an AI-powered text generator that crafts Haikus.</p>
     <div class="input-group">
         <input id="lineInput" type="text" placeholder="Number of lines">
     </div>
