Change to haiku generation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Haikus Text Generation</h1>
     <p>This application is an AI-powered text generator that crafts Haikus.</p>
     <div class="input-group">
-        <input id="lineInput" type="text" placeholder="Number of lines">
+        <input id="lineInput" type="text" placeholder="Number of haikus">
     </div>
     <input type="text" id="inputText" placeholder="Enter initial text">
     <button id="generateButton">Generate</button>
